--- a/ext/xml/index.yaml
+++ b/ext/xml/index.yaml
@@ -3,12 +3,8 @@ replacements:
     replacement: '\n  '
   - pattern: (^.*$)
     replacement: >
-      var ext = exports.ext = (function(){
+      var xml = exports.xml = (function(){
         var exports = {};
         \1
         return exports;
       })();
-
-dependencies:
-  - json/index.yaml
-  - xml/index.yaml
